noinst_LIBRARIES = libapplication.a

libapplication_a_SOURCES = \
	auxiliary.cpp \
	auxiliary.h \
	avahi.cpp \
	avahi.h \
	control.cpp \
	control.h \
	controltypes.cpp \
	controltypes.h \
	explorer.cpp \
	explorer.h \
	library.cpp \
	library.h \
	librarytypes.h \
	musicplayer.cpp \
	musicplayer.h \
	musictypes.h \
	network.cpp \
	network.h \
	player.cpp \
	player.h \
	resources.cpp \
	resources.h \
	sound.cpp \
	sound.h \
	streamconsts.h \
	streamlist.cpp \
	streamlist.h \
	sysconf.h \
	sysconf.cpp \
	upnpconsts.h \
	upnp.cpp \
	upnp.h \
	upnpservices.cpp \
	upnpservices.h \
	upnptypes.h

#libapplication_a_CPPFLAGS = -I$(top_srcdir)/src
#AM_CXXFLAGS = -std=c++0x -O3 -Wall -c -fmessage-length=0 -MMD -O3
AM_CXXFLAGS = -std=c++0x

